# DiscTracker

./: .gitignore  README.md  SimpleTracker.py  dictTest.py  environment.yml  gg6.py  plot3D.py  plot3D_mlab.py  plotly3D.py  pyproject.toml
data/rosie_pull/: camera_settings.yaml  pitch_dimensions.yaml
data/rosie_pull/tracks/: left.npz  right.npz
src/disc_tracker/: SimpleTracker.py  __init__.py  gg6.py  main.py  plot3D.py  plot3D_mlab.py  plotly3D.py  tracker.py
src/disc_tracker/deprojection/: disc_track.py  plot.py  plot3D.py  plot3D_mlab.py  plot_mlab.py  plot_mpl.py  plot_plotly.py  plotly3D.py  settings.py
src/disc_tracker/video_processing/: __init__.py  gg6.py  tracker.py
tests/disc_tracker/: test_disc_track.py  test_tracker.py
